Fix color, contrast, repetition, consistency on Greenville
h3 now blue (primary)
Fixed image/entity for thunderstorms to fit with Franklin image

--- a/weather/screen.css
+++ b/weather/screen.css
@@ -102,7 +102,7 @@ ul {list-style-type: none;
     padding: 1em;}
 
 /* change heading color for better clarity */
-.heading {color: #FFF;
+.heading {color: #0e89d5;
     margin-top: 0;
     justify-content: center;}
 
